tests/ui/reborrow/coerce-shared-marker-no-target-lifetime.stderr
error: implementing `CoerceShared` does not allow multiple lifetimes or fields to be coerced
  --> $DIR/coerce-shared-marker-no-target-lifetime.rs:13:10
   |
LL | impl<'a> CoerceShared<CustomMarkerRef> for CustomMarker<'a> {}
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

